Kubernetes/article-generator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: article-app-deployment
  namespace: fut
  labels:
    app: article-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: article-app
  template:
    metadata:
      labels:
        app: article-app
    spec:
      containers:
      - name: article-app
        image: shivanshudwivedi/article:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
#        resources:
#          limits:
#            memory: "512Mi"
#          requests:
#            memory: "256Mi"
