Kubernetes/football-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: football-api-deployment
  namespace: fut
  labels:
    app: football-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: football-api
  template:
    metadata:
      labels:
        app: football-api
    spec:
      containers:
      - name: football-api
        image: shivanshudwivedi/footballapi-addfixtures:0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
