Kubernetes/weather-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-api-deployment
  namespace: fut
  labels:
    app: weather-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-api
  template:
    metadata:
      labels:
        app: weather-api
    spec:
      containers:
      - name: weather-api
        image: shivanshudwivedi/weatherapi:0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
