Kubernetes/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  namespace: fut
  labels:
    app: website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: shivanshudwivedi/website:0.0.4
        imagePullPolicy: Always
        ports:
        - containerPort: 5173
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /health
            port: 5173
          failureThreshold: 2
          initialDelaySeconds: 15
          periodSeconds: 60
