Kubernetes/article-generator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: article-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: article-app
