Kubernetes/football-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: football-api-service
  namespace: fut
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: football-api
