Kubernetes/weather-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api-service
  namespace: fut
spec:
  type: LoadBalancer
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
  selector:
    app: weather-api
