Kubernetes/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: fut
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5173
    protocol: TCP
  selector:
    app: website
