Kubernetes/fut-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fut-ingress
  namespace: fut
spec:
  defaultBackend:
    service:
      name: website-service
      port:
        number: 80
